--- a/README.org
+++ b/README.org
@@ -140,3 +140,9 @@ System.InvalidOperationException: 'No service for type 'fake_fastgithub.HttpServ
 花了一上午的时间尝试原项目的各个 ~commit~ ，被我发现 ~4faa241b87712222e13047dd2d46430f23144d3b（挑选可用且最快的 ip）~ 该 ~commit~ 就已经有了我需要的功能（域环境下依然可以 ~git push~ ）。
 
 所以我打算在此 ~commit~ 上来重新开始。
+
+经过尝试发现该 ~commit~ 更好用，最新版下 ~git push~ 成功一次后过了一两分钟后就再次 ~push~ 大概率就失败了，需要重新退出并启动该软件，多次尝试下才会再次 ~push~ 成功。
+
+从本 ~commit~ 的日志输出来看，估计是此 ~commit~ 下当获得到最新的 ~ip~ 时，即可用的 ~ip~ 时，一直使用该地址，所以会一直成功；而最新版可能更新频率太快导致之前可用的 ~ip~ 被更新掉了。
+
+该 ~commit~ 也有一个问题就是如果是从 ~114.114.114.114~ 中获得的 ~ip~ ，它肯定是不可用的（日志输出会显示警告），你一直 ~push~ 就会一直失败。测算发现，该间隔是两分钟，即两分钟后再次 ~push~ ，就是重新去获取 ~ip~ 。
