--- a/README.org
+++ b/README.org
@@ -78,7 +78,7 @@ A project for creating a class library that targets .NET or .NET Standard
 error CS0579: Duplicate 'global::System.Runtime.Versioning.TargetFrameworkAttribute' attribute
 #+end_quote
 
-** 更改目录结构 <2024-05-30 周四>
+** 更改目录结构
 
 ~CS0579~ 这个错误可能跟目录结构有关：
 
@@ -208,3 +208,19 @@ System.InvalidOperationException: 'No service for type 'fake_fastgithub.HttpServ
 #+end_src
 
 不知道这里为什么会有这个错误？必须要加上 ~fake_fastgithub~ 命令空间限定，虽然该类就在此 ~fake_fastgithub~ 命令空间里。
+
+* <2024-06-29 周六>
+
+** 关于 ~System.InvalidOperationException~ 异常（修复）
+
+#+begin_src text
+  Unhandled exception. System.InvalidOperationException: Unable to
+  resolve service for type 'fake_fastgithub.FastGithubConfig' while
+  attempting to activate 'fake_fastgithub.RequestResolver'.
+#+end_src
+
+关于这个异常其中是由于 ~FastGithubConfig~ 没有被 ~依赖注入~ 所导致，即代码中的 ~TryAddSingleton~ ，但是我明明在 ~AddConfiguration~ 函数中已经注入了呀！再细看发现居然将 ~FastGithubConfig~ 错误的写成了 ~FastGithubOptions~ 。
+
+因为 ~RequestResolver~ 类是第一个运行的，所以 ~依赖注入~ 在构造它时发现它的构造函数参数 ~FastGithubConfig~ 没有被注入，所以报异常。
+
+我一直在想这些类的构造函数一直没有被显式调用，它们的构造函数参数，有两个，有三个，有四个的，那到底是怎么传参的？现在终于知道了，原来都是通过像 ~TryAddSingleton~ ， ~TryAddScoped~ ， ~TryAddTransient~ 这样的函数进行传参的。
