--- a/README.org
+++ b/README.org
@@ -255,3 +255,5 @@ fatal: Could not read from remote repository.
 Please make sure you have the correct access rights
 and the repository exists.
 #+end_src
+
+另外发现一个问题，我在 ~HttpClientHandler.SendAsync~ 中，还有其它函数中加的 ~Console.WriteLine~ 调试日志都没有显示出来，同时又回想到还有一个 ~RequestLoggingMiddleware~ 中间件没有实现，是不是这个原因导致的？
