--- a/README.org
+++ b/README.org
@@ -256,7 +256,7 @@ Please make sure you have the correct access rights
 and the repository exists.
 #+end_src
 
-另外发现一个问题，我在 ~HttpClientHandler.SendAsync~ 中，还有其它函数中加的 ~Console.WriteLine~ 调试日志都没有显示出来，同时又回想到还有一个 ~RequestLoggingMiddleware~ 中间件没有实现，是不是这个原因导致的？
+另外发现一个问题，我在 ~HttpClientHandler::SendAsync~ 中，还有其它函数中加的 ~Console.WriteLine~ 调试日志都没有显示出来，同时又回想到还有一个 ~RequestLoggingMiddleware~ 中间件没有实现，是不是这个原因导致的？
 
 * <2024-06-30 周日>
 
@@ -272,3 +272,21 @@ and the repository exists.
   interface ipv4 add dns "以太网" 192.168.1.1 validate=no
   interface ipv4 add dns "以太网" fe80::1%11 validate=no
 #+end_src
+
+** 关于 ~ToString~ 函数
+
+我说怎么原项目可以显示：
+
+#+begin_src text
+  info: fake_fastgithub.DnscryptProxyHostedService[0]
+  dnscrypt-proxy 启动成功
+#+end_src
+
+而此项目却只能显示它的命令空间：
+
+#+begin_src text
+  info: fake_fastgithub.DnscryptProxyHostedService[0]
+  fake_fastgithub.DnscryptProxy 启动成功
+#+end_src
+
+因此只要重写 ~DnscryptProxy::ToString~ 即可。
