--- a/README.org
+++ b/README.org
@@ -319,13 +319,97 @@ and the repository exists.
 花了一上午仔细研究了一下整个流程，发现以下几个类没有用到：
 
 #+begin_src text
-HttpClient.cs
-HttpClientFactory.cs
-HttpClientHandler.cs
-IHttpClientFactory.cs
-ReverseProxyApplicationBuilderExtensions.cs
-ReverseProxyMiddleware.cs
-ReverseProxyServiceCollectionExtensions.cs
+  HttpClient.cs
+  HttpClientFactory.cs
+  HttpClientHandler.cs
+  IHttpClientFactory.cs
+  ReverseProxyApplicationBuilderExtensions.cs
+  ReverseProxyMiddleware.cs
+  ReverseProxyServiceCollectionExtensions.cs
 #+end_src
 
 所以我将它们删除了，且发现整个项目用不到 ~Yarp.ReverseProxy~ 反向代理，所以这个依赖也可以去掉。（因此 ~AddHttpForwarder()~ 的调用也不需要了）。
+
+** 流程说明
+
+*** ~DnsServer~ 类
+
+该类是自写的，它绑定了 ~0.0.0.0:53~ 端口，处理当前本机发出的所有 ~DNS~ 请求。
+
+#+begin_src csharp
+  public async Task ListenAsync(CancellationToken cancellationToken)
+  {
+      var remoteEndPoint = new IPEndPoint(IPAddress.Any, 0);
+
+      while (cancellationToken.IsCancellationRequested == false)
+      {
+          try
+          {
+              var result = await socket.ReceiveFromAsync(buffer, SocketFlags.None, remoteEndPoint);
+              var datas = new byte[result.ReceivedBytes];
+              buffer.AsSpan(0, datas.Length).CopyTo(datas);
+              HandleRequestAsync(datas, result.RemoteEndPoint, cancellationToken);
+          }
+          catch (SocketException e) when (e.SocketErrorCode == SocketError.OperationAborted) { break; }
+      }
+  }
+#+end_src
+
++ 在 ~ListenAsync~ 函数中最初的 ~remoteEndPoint~ 变量值为 ~0.0.0.0:0~ 。
++ ~var result = await socket.ReceiveFromAsync(buffer, SocketFlags.None, remoteEndPoint);~ 接收到了本机的一个 ~DNS~ 请求。此时在 ~result.RemoteEndPoint~ 变量中即为请求者的 ~ip~ 和 ~端口~ 形如： ~127.0.0.1:57355~ 。
++ 然后交给 ~HandleRequestAsync~ 函数开始处理。
+
+#+begin_src csharp
+  private async void HandleRequestAsync(byte[] datas, EndPoint remoteEndPoint, CancellationToken cancellationToken)
+  {
+      try
+      {
+          var request = Request.FromArray(datas);
+          var remoteEndPointRequest = new RemoteEndPointRequest(request, remoteEndPoint);
+          var response = await requestResolver.Resolve(remoteEndPointRequest, cancellationToken);
+          await socket.SendToAsync(response.ToArray(), SocketFlags.None, remoteEndPoint);
+      }
+      catch (Exception ex)
+      {
+          logger.LogTrace($"处理 DNS 异常：{ex.Message}");
+      }
+  }
+#+end_src
+
++ 这里的变量使用名为 ~request~ （表示请求），因为此时还是本机的一个 ~DNS~ 请求。
++ 在 ~await requestResolver.Resolve~ 中处理请求并返回在 ~response~ 变量中，此 ~response~ 是直接从 ~request~ 中构造出来的，即代码中的 ~Response.FromRequest(request);~ 。这里真正做的就是将 ~response~ 增加一个应答记录，即 ~response.AnswerRecords.Add(record);~ ，它具体是做什么的目前还不理解，估计得去看一下 ~DNS~ 协议的相关内容。
++ 再调用 ~SendToAsync~ 将应答返回给 ~remoteEndPoint~ ，即形如： ~127.0.0.1:57355~ 的地址。（这里不太理解，为什么再把添加了 ~AnswerRecords~ 的数据又发回给请求者呢？）
+
+*** ~DomainResolver~ 类
+
+这个类获得真正的，没有被污染的 ~github~ 的 ~ip~ 地址。
+
+#+begin_src csharp
+  private async Task<IPAddress> LookupCoreAsync(IPEndPoint dns, DnsEndPoint endPoint,
+                                                CancellationToken cancellationToken)
+  {
+      Console.WriteLine($"LookupCoreAsync: dns: {dns}, endPoint: {endPoint}");
+
+      var dnsClient = new DnsClient(dns);
+      using var timeoutTokenSource = new CancellationTokenSource(lookupTimeout);
+      using var linkedTokenSource =
+                    CancellationTokenSource.CreateLinkedTokenSource(cancellationToken, timeoutTokenSource.Token);
+
+      var addresses = await dnsClient.Lookup(endPoint.Host, RecordType.A, linkedTokenSource.Token);
+      var fastAddress = await GetFastIPAddressAsync(addresses, endPoint.Port, cancellationToken);
+      if (fastAddress != null)
+      {
+          logger.LogInformation($"[{endPoint.Host}->{fastAddress}]");
+          return fastAddress;
+      }
+
+      throw new Exception($"dns {dns} 解析不到 {endPoint.Host} 可用的 ip");
+  }
+#+end_src
+
+#+begin_src text
+  LookupCoreAsync: dns: 127.0.0.1:5533, endPoint: Unspecified/ssh.github.com:443
+#+end_src
+
++ ~127.0.0.1:5533~ 是 ~dnscrypt-proxy.exe~ 的地址，即向它查询 ~Unspecified/ssh.github.com:443~ 的真正 ~ip~ 地址。
++ 如果这里查询不到的话，则会使用 ~114.114.114.114:53~ 中的相应 ~ip~ ，这样 ~push~ 或者 ~pull~ 将失败。
